--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -3,8 +3,10 @@
 <div *ngFor="let product of products">
 
   <h3>
-    <a [title]="product.name + ' details'">
-      {{ product.name }}
+    <a
+      [title]="product.name + ' details'"
+      [routerLink]="['/products', product.id]">
+      {{ product.name }} ({{ product.id }})
     </a>
   </h3>
 
